--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -21,7 +21,7 @@ body {
 ol, ul {
 	list-style: none;
 }
-
+.collapse
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -42,21 +42,21 @@ nav {
   justify-content: space-between; 
   align-items: center;
   height:5vh;
-  font-size: 1.75vw;
+  font-size: 1.75vh;
   width: 100%;
   height: 100%;  
 }
 
 .logo{
-  font-size: 2vw;
-    text-transform: uppercase;
-    padding-left: 0.75vw;
-    padding-right: 0.75vw;
-    border-right: 2px solid rgb(0, 0, 0);
-    height: 100%;
-    display: flex;
-    align-items: center;
-    background-color: azure;
+  font-size: 1.15vw;
+  text-transform: uppercase;
+  padding-left: 0.75vw;
+  padding-right: 0.75vw;
+  border-right: 2px solid rgb(0, 0, 0);
+  height: 100%;
+  display: flex;
+  align-items: center;
+  background-color: azure;
 }
 
 .logo h5 {
@@ -76,7 +76,9 @@ nav ul {
 
 .nav-item {
   text-decoration: none;
-  font-size: 2vw;
+  font-size: 4vh;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .project-style {
@@ -86,7 +88,8 @@ nav ul {
 .profile p{
   color: #000;
 }
-nav a:hover {
+
+.navbar-nav a:hover {
   color: var(--colour1);
   
 }
